--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-soccerdata
-pandas
-plotly
-lxml
+streamlit>=1.30.0
+soccerdata>=1.5.0
+pandas>=2.1.0
+plotly>=5.18.0
+lxml>=5.1.0
 html5lib
 scipy
